--- a/styles/v2.css
+++ b/styles/v2.css
@@ -174,7 +174,7 @@ mark{
   margin-bottom: 30px;
   margin-top: 40px;
   background-color: #f5f9ff;
-  font-family:playfair-display;
+  font-family:Lucida grande;
   padding:50px;
 }
 
@@ -304,7 +304,7 @@ section{
   text-align: center;
   text-decoration:none;
   font-size: 12px;
-  font-family:playfair-display;
+  font-family:Lucida grande;
   margin-top: 10px;
 }
 
