--- a/styles/v2.css
+++ b/styles/v2.css
@@ -42,10 +42,6 @@ hr {
   margin-bottom: 12px;
 }
 
-.first-row{
-  background-color: #cce5ff;
-}
-
 .box{
   flex-grow:1;
 }
@@ -63,14 +59,19 @@ hr {
 }
 
 .logo{
-    width: 300px;
     padding-top: 25px;
     padding-left: 100px;
-    font-size: 20px;
+    font-size: 30px;
+}
+
+#infosci{
+    color:#989898;
+    font-size:15px;
 }
 
 nav ul {
-  margin: 0;
+  margin-right: 70px;
+  margin-top: 50px;
   padding: 0;
   list-style-type: none;
   display: flex;
@@ -126,10 +127,9 @@ p.email {
 }
 
 h2 {
-  text-align: center;
   color:black;
-  padding: 10px;
   font-family:Lucida grande;
+  text-align: center;
 }
 
 img.profile{
@@ -149,9 +149,11 @@ img.profile{
 
 .para{
   padding: 40px;
-  padding-top: 80px;
+  padding-top: 10px;
   padding-right: 70px;
   font-family:Lucida grande;
+  color:#6c6c6c;
+  font-size:15px;
 }
 
 mark{
@@ -240,7 +242,7 @@ img.ccny{
 }
 
 .footer p{
-  color: #793a3a;
+  color: #838383;
 }
 
 .icon{
@@ -251,67 +253,6 @@ img.ccny{
 /*classes for hiding text and showing error messages*/
 .hidden {
   display: none !important;
-}
-
-/*form*/
-section{
-  border: 5px solid #cce5ff;
-  width: 30%;
-  margin: auto;
-  padding: 30px;
-  margin-top: 20px;
-  display: flex;
-  flex-direction: column;
-}
-
-#form{
-  display:flex;
-  flex-direction:column;
-  text-align:center;
-}
-#form div{
-  margin-bottom: 10px;
-}
-
-#form label{
-  display: inline-block;
-  text-align: right;
-  width: 100px;
-  font-family:Lucida grande;
-}
-
-#form button.submit {
-  margin: auto;
-  width: 100px;
-  height: 20px;
-}
-
-#form p{
-  color:red;
-  display: block;
-  font-weight: bold;
-  font-size: 15px;
-}
-
-#form textarea{
-  display:inline-block;
-}
-
-
-.box button{
-  background-color:black;
-  color:white;
-  border:none;
-  padding: 10px 25px;
-  text-align: center;
-  text-decoration:none;
-  font-size: 12px;
-  font-family:Lucida grande;
-  margin-top: 10px;
-}
-
-h3{
-  margin:0px;
 }
 
 /*slideshow*/
@@ -396,7 +337,7 @@ h3{
   background-size: cover;
 }
 
-.art{
+.artcover{
     background: url(../images/path02.jpg) no-repeat center center;
     background-size: cover;
 }
