--- a/styles/v2.css
+++ b/styles/v2.css
@@ -62,7 +62,14 @@ hr {
     padding-top: 25px;
     padding-left: 100px;
     font-size: 30px;
-    color: black;
+}
+
+.logo a{
+    color: #cce5ff;
+    font-style: italic;
+    text-shadow: 3px 3px #000000;
+    font-weight: 200;
+    font-size: 34px;
 }
 
 #infosci{
@@ -96,10 +103,8 @@ nav ul li a {
   margin: 0.5em;
 }
 
-
 a:link {
   text-decoration:none;
-  color: black;
 }
 
 nav a:hover{
@@ -330,6 +335,14 @@ img.ccny{
   font-style: italic;
   text-transform: uppercase;
   text-shadow: 3px 3px #000000;
+}
+
+h1{
+    color: #cce5ff;
+    font-style: italic;
+    text-shadow: 3px 3px #000000;
+    font-weight: 200;
+    font-size: 34px;
 }
 
 .ux{
