--- a/styles/v2.css
+++ b/styles/v2.css
@@ -369,3 +369,32 @@ h1{
     height:800px;
     text-align:center;
 }
+
+.box6{
+    width:80%;
+    text-align:center;
+}
+
+.button{
+    border-radius: 12px;
+    border: none;
+    color: white;
+    background-color: rgb(77, 75, 75);
+    text-align:center;
+    padding: 15px 32px;
+    font-size: 16px;
+    transition-duration: 0.4s;
+}
+
+.button:hover {
+  background-color: white;
+  color:rgb(77, 75, 75);
+  border: 2px solid rgb(77, 75, 75);
+}
+
+.a{
+    margin: auto;
+    width: 100%;
+    padding: 10px;
+    text-align: center;
+}
